--- a/src/App.pug
+++ b/src/App.pug
@@ -1,13 +1,12 @@
-<script>
+script.
 	export let name;
-</script>
 
-<main>
-	<h1>Hello {name}!</h1>
-	<p>Visit the <a href="https://svelte.dev/tutorial">Svelte tutorial</a> to learn how to build Svelte apps.</p>
-</main>
 
-<style>
+main
+  h1 Hello {name}!
+	p Visit the <a href="https://svelte.dev/tutorial">Svelte tutorial</a> to learn how to build Svelte apps.
+
+style.
 	main {
 		text-align: center;
 		padding: 1em;
@@ -27,4 +26,3 @@
 			max-width: none;
 		}
 	}
-</style>
